# rosjp_urdf_tutorial_packages

./: README.md
manipulator_description/: CMakeLists.txt  package.xml
manipulator_description/config/: manipulator.yaml
manipulator_description/launch/: manipulator_simulation.launch
manipulator_description/urdf/: manipulator.gazebo.xacro  manipulator.urdf.xacro  manipulator_parts.xacro  one_finger_gripper.xacro
mobile_robot_description/: CMakeLists.txt  package.xml
mobile_robot_description/launch/: mobile_robot_simulation.launch
mobile_robot_description/meshes/: mobile_robot_caster.skp  mobile_robot_caster.stl  raspi_mouse_body.skp  raspi_mouse_body.stl
mobile_robot_description/urdf/: mobile_robot.urdf
