<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>manipulator_description</name>
  <version>1.0.0</version>
  <description>マニピュレータ型ロボットのURDF</description>
  <maintainer email="git@killbots.net">Geoffrey Biggs</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>
</package>
