<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>mobile_robot_description</name>
  <version>1.0.0</version>
  <description>移動型ロボットのURDF</description>
  <maintainer email="git@killbots.net">Geoffrey Biggs</maintainer>
  <license>Apache License 2.0</license>


  <buildtool_depend>catkin</buildtool_depend>
</package>
